--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,18 @@ services:
     restart: always
     networks:
       - backend
+
+  rabbitmq:
+    container_name: "rabbitmq"
+    image: rabbitmq:3.8-management-alpine
+    environment:
+      - RABBITMQ_DEFAULT_USER=user
+      - RABBITMQ_DEFAULT_PASS=mypass
+    ports:
+    # rabbitmq instant
+      - '5672:5672'
+    # web interface
+      - '15672:15672'
+    networks:
+      - backend
+
